--- a/src/styles/ArtifactDescriptionAbout.scss
+++ b/src/styles/ArtifactDescriptionAbout.scss
@@ -250,7 +250,8 @@
     max-width: 450px;
     
     .description-text {
-      font-size: 1.5rem;
+      font-size: 2rem;
+      line-height: 3rem;
     }
   }
 }
@@ -300,7 +301,8 @@
     max-width: 250px;
     
     .description-text {
-      font-size: 1.2rem;
+      font-size: 2rem;
+      line-height: 3rem;
     }
   }
 }
