--- a/src/styles/polaroid.scss
+++ b/src/styles/polaroid.scss
@@ -59,7 +59,7 @@
 }
 
 .hover-major {
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   margin: 2px 0;
   opacity: 0.9;
 }
@@ -67,11 +67,11 @@
 .hover-about {
   font-size: 0.85rem;
   line-height: 1.35;
-  margin-top: 6px;
+  margin: 6px 0;;
 }
 
 .hover-portfolio {
-  font-size: 0.83rem;
+  font-size: 0.8rem;
   line-height: 1.35;
   margin-top: 6px;
 }
