--- a/src/styles/polaroid.scss
+++ b/src/styles/polaroid.scss
@@ -74,6 +74,8 @@
   transition: opacity 0.2s ease;
   will-change: opacity;
 
+  font-family: 'Roboto', sans-serif;
+
   border-radius: 2px;
   overflow-y: auto;
   max-height: 100%;
