--- a/src/styles/polaroid.scss
+++ b/src/styles/polaroid.scss
@@ -75,6 +75,7 @@
   will-change: opacity;
 
   font-family: 'Roboto', sans-serif;
+  font-weight: 400;
 
   border-radius: 2px;
   overflow-y: auto;
