--- a/src/styles/StaticLanding.scss
+++ b/src/styles/StaticLanding.scss
@@ -338,6 +338,9 @@
   font-weight: 500;
   margin: 0 0 18px 0;
   letter-spacing: 0.01em;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .statement-section__body {
@@ -358,7 +361,7 @@
   font-weight: 400;
   font-size: 0.75em;
   opacity: 0.75;
-  margin-left: 6px;
+  margin-top: 6px;
   white-space: nowrap;
 }
 /* Desktop spacing */
