--- a/src/styles/StaticLanding.scss
+++ b/src/styles/StaticLanding.scss
@@ -175,9 +175,6 @@
   color: rgba(255, 255, 255, 0.9);
   margin-bottom: 18px;
 }
-.timer-section {
-  position: relative;
-}
 
 .timer-background {
   position: absolute;
@@ -207,6 +204,19 @@
 .timer-section__overlay {
   position: relative;
   z-index: 2;
+  opacity: 0;
+  transform: scale(0.99);
+  transition: opacity 0.9s ease, transform 0.9s ease;
+}
+
+.timer-section__overlay.fade-in {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.timer-section__overlay:not(.fade-in) {
+  opacity: 0;
+  transform: scale(0.99);
 }
 
 /* Mobile: 2 columns x 4 rows */
@@ -287,6 +297,42 @@
   opacity: 1;
 }
 
+/*Cover Photos (After timer finishes)*/
+.cover-photos-overlay {
+  position: relative;
+  z-index: 2;
+  min-height: 100svh;
+  min-height: 100dvh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 24px 16px;
+  opacity: 0;
+  transform: scale(0.99);
+  transition: opacity 0.9s ease, transform 0.9s ease;
+}
+
+.cover-photos-overlay.fade-in {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.cover-photos-grid {
+  width: 100%;
+  max-width: 800px;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr); /* 1 column on mobile */
+  gap: 24px;
+}
+
+.cover-photo {
+  width: 100%;
+  height: auto;
+  // max-height: 60vh;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
 /* desktop: 4 columns like your screenshot */
 @media (min-width: 900px) {
   .timer-grid {
@@ -305,7 +351,16 @@
   .statement-section {
     scroll-snap-align: start;
   }
+
+  .cover-photos-grid {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 32px;
+  }
 }
+
+
+
+
 
 /* Statement section */
 .statement-section {
@@ -330,6 +385,18 @@
   margin: 0 auto;
 
   color: rgba(255, 255, 255, 0.92);
+
+  transition: opacity 0.9s ease, transform 0.9s ease;
+}
+
+.statement-section__overlay {
+  opacity: 0;
+  transform: scale(0.99);
+}
+
+.statement-section__overlay.fade-in {
+  opacity: 1;
+  transform: scale(1);
 }
 
 .statement-section__header {
